--- a/index.html
+++ b/index.html
@@ -28,50 +28,24 @@
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recommended Scenery Spot<span class="caret"></span></a>
 	          <ul class="dropdown-menu" data-bind="foreach: recommendedPlaces">
-	            <li><a href="#" data-bind="text: name, click: $parent.searchRecommendedPlaces"></a></li>
-	          </ul>
-	        </li>
-	      </ul>
-	      <ul class="nav navbar-nav" data-bind="visible: searchHistroies().length > 0">
-	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Search Histroies<span class="caret"></span></a>
-	          <ul class="dropdown-menu" data-bind="foreach: searchHistroies">
-	            <li><a href="#" data-bind="text: name"></a></li>
+	            <li><a href="#" data-bind="text: name, click: $parent.searchRecommendedPlacesAndNearbyMetroStations"></a></li>
 	          </ul>
 	        </li>
 	      </ul>
 	      <div class="navbar-form navbar-left">
 	        <div class="form-group ">
-	          <input type="text" class="form-control" placeholder="Any places interested?">
+	          <input type="text" class="form-control" placeholder="Any places interested?" id="place-search-text">
 	        </div>
-	        <button type="submit" class="btn btn-default">Go</button>
+	        <button type="submit" class="btn btn-default" data-bind="click: searchPlacesAndNearbyMetroStations">Go</button>
 	      </div>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
     <div id="map"></div>
-    <script>
-      // var map;
-      // function initMap() {
-      //   // Constructor creates a new map - only center and zoom are required.
-      //   map = new google.maps.Map(document.getElementById('map'), {
-      //     center: {lat: 31.230437, lng: 121.473719},
-      //     zoom: 13
-      //   });
-        
-        // var tribeca = {lat: 31.230437, lng: 121.473719};
-        // var marker = new google.maps.Marker({
-        //   position: tribeca,
-        //   map: map,
-        //   title: 'First Marker!'
-        // });
-      // }
-    </script>
     <script src="js/map-services.js"></script>
 	<script src="js/app.js"></script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD4Bc--lkSUEexeOWebqjAKWAd8n2ddeI&v=3&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD4Bc--lkSUEexeOWebqjAKWAd8n2ddeI&v=3&callback=initMap&libraries=places">
     </script>
-
   </body>
 </html>
