--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <script src="js/map-services.js"></script>
 	<script src="js/app.js"></script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD4Bc--lkSUEexeOWebqjAKWAd8n2ddeI&v=3&callback=initMap&libraries=places">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD4Bc--lkSUEexeOWebqjAKWAd8n2ddeI&v=3&callback=initMap&libraries=places&language=en">
     </script>
   </body>
 </html>
