--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 	          </ul>
 	        </li>
 	      </ul>
+	      <ul class="nav navbar-nav">
+	      	<li class="dropdown">
+	      		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hide / Show Metro Station<span class="caret"></span></a>
+				<ul class="dropdown-menu">
+					<li><a href="#" data-bind="click: hideMetroStations">Hide</a></li>
+					<li><a href="#" data-bind="click: showMetroStations">Show</a></li>
+				</ul>
+	      	</li>
+	      </ul>
 	      <div class="navbar-form navbar-left">
 	        <div class="form-group ">
 	          <input type="text" class="form-control" placeholder="Any places interested?" id="place-search-text">
