--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+	<div class="side-bar">
+		<div class="metro-station-filter">
+			<input type="text" class="form-control" placeholder="Filter metro station" id="station-filter-box">
+			<button type="submit" class="btn btn-default" data-bind="click: filterStationMarker">Filter</button>
+		</div>
+		<h4 class="metro-station-title">Metro Station List</h4>
+		<ul class="metro-station-list" data-bind="foreach: metroStations">
+			<li data-bind="text: name"></li>
+		</ul>
+	</div>
     <div id="map"></div>
     <script src="js/map-services.js"></script>
 	<script src="js/app.js"></script>
