--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	      </ul>
 	      <div class="navbar-form navbar-left">
 	        <div class="form-group ">
-	          <input type="text" class="form-control" placeholder="Any places interested?" id="place-search-text">
+	          <input type="text" class="form-control" placeholder="Any places interested?" id="place-search-text" data-bind="value: place">
 	        </div>
 	        <button type="submit" class="btn btn-default" data-bind="click: searchPlacesAndNearbyMetroStations">Go</button>
 	      </div>
@@ -53,11 +53,11 @@
 	<div class="side-bar">
 		<div class="metro-station-filter">
 			<input type="text" class="form-control" placeholder="Filter metro station" id="station-filter-box">
-			<button type="submit" class="btn btn-default" data-bind="click: filterStationMarker">Filter</button>
+			<button type="submit" class="btn btn-default" data-bind="click: filterStationMarker, textInput: stationName">Filter</button>
 		</div>
 		<h4 class="metro-station-title">Metro Station List</h4>
 		<ul class="metro-station-list" data-bind="foreach: metroStations">
-			<li data-bind="text: name"></li>
+			<a href="#"><li data-bind="text: name, click: $parent.showRelatedMarkerInfo"></li></a>
 		</ul>
 	</div>
     <div id="map"></div>
