--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
   	<title>Travelling Shanghai By Metro</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<script src="js/jquery-3.1.1.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script type="text/javascript" src="js/knockout-3.4.1.js"></script>
-    </style>
   </head>
   <body>
   	<nav class="navbar navbar-default map-navbar">
@@ -50,7 +46,7 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-	<div class="side-bar">
+	<aside class="side-bar">
 		<div class="metro-station-filter">
 			<input type="text" class="form-control" placeholder="Filter metro station" id="station-filter-box">
 			<button type="submit" class="btn btn-default" data-bind="click: filterStationMarker, textInput: stationName">Filter</button>
@@ -59,11 +55,14 @@
 		<ul class="metro-station-list" data-bind="foreach: metroStations">
 			<a href="#"><li data-bind="text: name, click: $parent.showRelatedMarkerInfo"></li></a>
 		</ul>
-	</div>
-    <div id="map"></div>
+	</aside>
+    <main id="map"></main>
+    <script src="js/jquery-3.1.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/knockout-3.4.1.js"></script>
     <script src="js/map-services.js"></script>
 	<script src="js/app.js"></script>
-    <script async defer
+    <script async defer onerror = "mapError()" 
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD4Bc--lkSUEexeOWebqjAKWAd8n2ddeI&v=3&callback=initMap&libraries=places&language=en">
     </script>
   </body>
