--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 	</nav>
 	<aside class="side-bar">
 		<div class="metro-station-filter">
-			<input type="text" class="form-control" placeholder="Filter metro station" id="station-filter-box">
-			<button type="submit" class="btn btn-default" data-bind="click: filterStationMarker, textInput: stationName">Filter</button>
+			<input type="search" class="form-control" placeholder="Filter metro station" id="station-filter-box" data-bind="textInput: stationName">
+			<button type="submit" class="btn btn-default" data-bind="click: filterStationMarker">Filter</button>
 		</div>
 		<h4 class="metro-station-title">Metro Station List</h4>
 		<ul class="metro-station-list" data-bind="foreach: metroStations">
